--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
     <main>
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="2000">
-                    <img src="imagens/banner1.png" class="d-block w-100" height="700px" alt="...">
+                <div class="carousel-item active" data-bs-interval="1000">
+                    <img src="imagens/banner1.png" id="imgs1" class="d-block w-100" height="700px" alt="...">
                 </div>
                 <div class="carousel-item"  data-bs-interval="2000">
-                    <img src="imagens/banner1.png" class="d-block w-100" height="700px" alt="...">
+                    <img src="imagens/banner2.png" id="imgs1" class="d-block w-100" height="700px" alt="...">
                 </div>
-                <div class="carousel-item"  data-bs-interval="2000">
-                    <img src="imagens/banner1.png" class="d-block w-100" height="700px" alt="...">
+                <div class="carousel-item"  >
+                    <img src="imagens/banner3.png" id="imgs1" class="d-block w-100" height="700px" alt="...">
                 </div>
             </div>
            
