--- a/produtos.html
+++ b/produtos.html
@@ -10,7 +10,8 @@
     crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link rel="stylesheet" href="styleProducts.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleProducts.css">
   <title>Todos os nossos produtos aqui !</title>
 </head>
 
@@ -184,21 +185,26 @@
           <div class="alinhar">
             <div class="card">
               <div class="image"><img class="imagensCard" src="imagens/card1.jpg" alt=""></div>
-              <h2 class="title">Cool Chair</h2>
-              <span class="price dolar">$100</span>
-              <span class="real">$100</span>
+              <h6 class="title" id="nomeProduto7"></h6>
+              <span class="id" id="id7"></span>
+              <span class="real" id="valorRealProduto7"></span>
+              <span class="price dolar" id="valorDolarProduto7"></span>
             </div>
+
             <div class="card">
               <div class="image"><img class="imagensCard" src="imagens/card1.jpg" alt=""></div>
-              <h2 class="title">Cool Chair</h2>
-              <span class="price dolar">$100</span>
-              <span class="real">$100</span>
+              <h6 class="title" id="nomeProduto8"></h6>
+              <span class="id" id="id8"></span>
+              <span class="real" id="valorRealProduto8"></span>
+              <span class="price dolar" id="valorDolarProduto8"></span>
             </div>
+
             <div class="card">
               <div class="image"><img class="imagensCard" src="imagens/card1.jpg" alt=""></div>
-              <h2 class="title">Cool Chair</h2>
-              <span class="price dolar">$100</span>
-              <span class="real">$100</span>
+              <h6 class="title" id="nomeProduto9"></h6>
+              <span class="id" id="id9"></span>
+              <span class="real" id="valorRealProduto9"></span>
+              <span class="price dolar" id="valorDolarProduto9"></span>
             </div>
 
           </div>
