--- a/produtos.html
+++ b/produtos.html
@@ -80,7 +80,7 @@
           <div class="alinhar">
             <div class="card">
               <div class="image"><img class="imagensCard" src="imagens/card1.jpg" alt=""></div>
-              <h6 class="title" id="nomeProduto1"></h6>
+              <a class="title" id="nomeProduto1" href="./produto6398.html"></a>
               <span class="id" id="id"></span>
               <span class="real" id="valorRealProduto1"></span>
               <span class="price dolar" id="valorDolarProduto1"></span>
@@ -271,4 +271,23 @@
   </footer>
 </body>
 <script src="scriptProdutos.js"></script>
+<script>
+    const btnMobile = document.getElementById('btn-mobile');
+      
+      function toggleMenu(event) {
+         if (event.type === 'touchstart') event.preventDefault();
+         const nav = document.getElementById('nav');
+         nav.classList.toggle('active');
+         const active = nav.classList.contains('active');
+         event.currentTarget.setAttribute('aria-expanded', active);
+         if (active) {
+            event.currentTarget.setAttribute('aria-label', 'Fechar Menu');
+         } else {
+            event.currentTarget.setAttribute('aria-label', 'Abrir Menu');
+         }
+      }
+      
+      btnMobile.addEventListener('click', toggleMenu);
+       btnMobile.addEventListener('touchstart', toggleMenu);
+</script>
 </html>
