--- a/produto6398.html
+++ b/produto6398.html
@@ -73,7 +73,7 @@
         
 <div class="card-descricao-produto">
     <div class="produtoedescricao">
-    <img src="./imagens/img1.jpg" class="produto">
+    <img src="./imagens/produto1Index.png" class="produto">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt repellendus sequi, 
         nihil libero, ducimus hic vero ipsam veritatis natus 
         laudantium quo id assumenda placeat quas non rerum ab cumque dolores.</p>
