--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <form>
           <div class="input-wrapper">
-            <input type="text" placeholder="Pesquisar produto" name="text" class="input">
+            <input type="text" placeholder="Pesquisar produto" name="text" class="input" id="barraa">
           </div>
         </form>
       </ul>
