--- a/produto6398.html
+++ b/produto6398.html
@@ -64,8 +64,9 @@
 
         <div class="produtoedescricao">
           <p class="produto-titulo">Sabonete corporal limpa e perfuma - VEGANO</p>
+          <img src="imagens/produto1Index.png" alt="" id="imagemProduto">
           <p class="descricao-produto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia deserunt quisquam
-            repellendus, excepturi molestiae, similique vitae aperiam eius nesciunt ullam quis asperiores. Rerum dolorum
+            repellendus, similique vitae aperiam eius nesciunt ullam quis asperiores. Rerum dolorum
             dolor aliquid illum blanditiis? Assumenda, quae!</p>
 
             <span class="id" id="id"></span>
@@ -112,12 +113,11 @@
 
 </main>
 
-
 <footer class="footer-sobre">
 
   <div class="container text-center">
     <div class="row justify-content-md-center">
-      <img class="pLogoimg" src="imagens/logo2.png" alt="">
+      <a href="index.html"><img  class="pLogoimg" src="imagens/logo2.png" alt=""></a> 
 
       <div class="col col-lg-2">
         <b>HighLander Bionatural</b>
