--- a/produtos.html
+++ b/produtos.html
@@ -10,7 +10,7 @@
     crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    
+    <meta http-equiv="refresh" content="720"/>
     <link rel="stylesheet" href="style.css">
   <title>Todos os nossos produtos aqui !</title>
 </head>
