--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
 
   <main>
+    
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="1000">
@@ -74,6 +75,7 @@
         <div class="carousel-item active">
 
           <div class="alinhar">
+            <a href="./produto6398.html">
             <div class="card">
               <div class="image"><img class="imagensCard" src="imagens/produto1Index.png" alt=""></div>
               <a class="title" id="nomeProduto1" href="./produto6398.html"></a>
@@ -81,23 +83,29 @@
               <span class="real" id="valorRealProduto1"></span>
               <span class="price dolar" id="valorDolarProduto1"></span>
             </div>
+          </a>
 
+
+          <a href="./produto2.html">
             <div class="card">
               <div class="image"><img class="imagensCard" src="imagens/produto2Index.png" alt=""></div>
-              <h6 class="title" id="nomeProduto2"></h6>
+              <a class="title" id="nomeProduto2" href="./produto2.html"></a>
               <span class="id" id="id2"></span>
               <span class="real" id="valorRealProduto2"></span>
               <span class="price dolar" id="valorDolarProduto2"></span>
             </div>
+          </a>
 
+
+          <a href="./produto3.html">
             <div class="card">
               <div class="image"><img class="imagensCard" src="imagens/produto3Index.png" alt=""></div>
-              <h6 class="title" id="nomeProduto3"></h6>
+              <a class="title" id="nomeProduto3" href="./produto3.html"></a>
               <span class="id" id="id3"></span>
               <span class="real" id="valorRealProduto3"></span>
               <span class="price dolar" id="valorDolarProduto3"></span>
             </div>
-
+          </a>
 
           </div>
         </div>
@@ -105,6 +113,7 @@
         <div class="carousel-item">
 
           <div class="alinhar">
+            <a href="./produto4.html">
             <div class="card">
               <div class="image"><img class="imagensCard" src="imagens/produtoIndex4.png" alt=""></div>
               <h6 class="title" id="nomeProduto4"></h6>
@@ -112,16 +121,17 @@
               <span class="real" id="valorRealProduto4"></span>
               <span class="price dolar" id="valorDolarProduto4"></span>
             </div>
+          </a>
 
-
+            <a href="./produto5.html">
               <div class="card">
-              <div class="image"><img class="imagensCard" src="imagens/produtoIndex5.png" alt=""></div>
+              <div class="image"><img class="imagensCard" src="./imagens/produtoo5.png" alt=""></div>
               <h6 class="title" id="nomeProduto5"></h6>
               <span class="id" id="id5"></span>
               <span class="real" id="valorRealProduto5"></span>
               <span class="price dolar" id="valorDolarProduto5"></span>
             </div>
-
+          </a>
 
              <div class="card">
               <div class="image"><img class="imagensCard" src="imagens/produtoIndex6.png" alt=""></div>
