--- a/produtos.html
+++ b/produtos.html
@@ -10,7 +10,8 @@
     crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <meta http-equiv="refresh" content="720"/>
+    
+    
     <link rel="stylesheet" href="style.css">
   <title>Todos os nossos produtos aqui !</title>
 </head>
@@ -65,6 +66,7 @@
         <div class="carousel-item active">
 
           <div class="alinhar">
+            <a href="./produto6398.html">
             <div class="card">
               <div class="image"><img class="imagensCard" src="imagens/produto1Index.png" alt=""></div>
               <a class="title" id="nomeProduto1" href="./produto6398.html"></a>
@@ -72,23 +74,30 @@
               <span class="real" id="valorRealProduto1"></span>
               <span class="price dolar" id="valorDolarProduto1"></span>
             </div>
+          </a>
 
+
+
+          <a href="./produto2.html">
             <div class="card">
               <div class="image"><img class="imagensCard" src="imagens/produto2Index.png" alt=""></div>
-              <h6 class="title" id="nomeProduto2"></h6>
+              <a class="title" id="nomeProduto2" href="./produto2.html"></a>
               <span class="id" id="id2"></span>
               <span class="real" id="valorRealProduto2"></span>
               <span class="price dolar" id="valorDolarProduto2"></span>
             </div>
+          </a>
 
+
+          <a href="./produto3.html">
             <div class="card">
               <div class="image"><img class="imagensCard" src="imagens/produto3Index.png" alt=""></div>
-              <h6 class="title" id="nomeProduto3"></h6>
+              <a class="title" id="nomeProduto3" href="./produto3.html"></a>
               <span class="id" id="id3"></span>
               <span class="real" id="valorRealProduto3"></span>
               <span class="price dolar" id="valorDolarProduto3"></span>
             </div>
-
+          </a>
 
           </div>
         </div>
@@ -96,23 +105,27 @@
         <div class="carousel-item">
 
           <div class="alinhar">
+
+            <a href="./produto4.html">
             <div class="card">
-              <div class="image"><img class="imagensCard" src="imagens/produtoIndex4.png" alt=""></div>
-              <h6 class="title" id="nomeProduto4"></h6>
+              <div class="image"><img class="imagensCard" src="imagens/produtoo4.png" alt=""></div>
+              <a class="title" id="nomeProduto4" href="./produto4.html"></a>
               <span class="id" id="id4"></span>
               <span class="real" id="valorRealProduto4"></span>
               <span class="price dolar" id="valorDolarProduto4"></span>
             </div>
+            </a>
 
 
+            <a href="./produto5.html">
               <div class="card">
-              <div class="image"><img class="imagensCard" src="imagens/produtoIndex5.png" alt=""></div>
-              <h6 class="title" id="nomeProduto5"></h6>
+              <div class="image"><img class="imagensCard" src="imagens/produtoo5.png" alt=""></div>
+              <a class="title" id="nomeProduto5" href="./produto5.html"></a>
               <span class="id" id="id5"></span>
               <span class="real" id="valorRealProduto5"></span>
               <span class="price dolar" id="valorDolarProduto5"></span>
             </div>
-
+            </a>
 
              <div class="card">
               <div class="image"><img class="imagensCard" src="imagens/produtoIndex6.png" alt=""></div>
