--- a/produto4.html
+++ b/produto4.html
@@ -63,7 +63,7 @@
       <div class="card-descricao-produto">
 
         <div class="produtoedescricao">
-          <p class="produto-titulo">Shampoo em barra limpeza profunda - VEGANO</p>
+          <p class="produto-titulo">Shampoo e Condicionador - VEGANO</p>
           <img src="imagens/produtoo4.png" alt="" id="imagemProduto">
           <p class="descricao-produto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia deserunt quisquam
             repellendus, similique vitae aperiam eius nesciunt ullam quis asperiores. Rerum dolorum
