--- a/produto5.html
+++ b/produto5.html
@@ -64,7 +64,7 @@
 
         <div class="produtoedescricao">
           <p class="produto-titulo">Argila verde - VEGANO</p>
-          <img src="imagens/produto1Index.png" alt="" id="imagemProduto">
+          <img src="imagens/produtoo5.png" alt="" id="imagemProduto">
           <p class="descricao-produto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia deserunt quisquam
             repellendus, similique vitae aperiam eius nesciunt ullam quis asperiores. Rerum dolorum
             dolor aliquid illum blanditiis? Assumenda, quae!<br><br>
