--- a/index.html
+++ b/index.html
@@ -69,84 +69,88 @@
 
 
     <div class="carousel-products">
-    <div id="carouselExample" class="carousel slide">
-
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-
-          <div class="alinhar">
-            <a href="./produto6398.html">
-            <div class="card">
-              <div class="image"><img class="imagensCard" src="imagens/produto1Index.png" alt=""></div>
-              <a class="title" id="nomeProduto1" href="./produto6398.html"></a>
-              <span class="id" id="id"></span>
-              <span class="real" id="valorRealProduto1"></span>
-              <span class="price dolar" id="valorDolarProduto1"></span>
-            </div>
-          </a>
-
-
-          <a href="./produto2.html">
-            <div class="card">
-              <div class="image"><img class="imagensCard" src="imagens/produto2Index.png" alt=""></div>
-              <a class="title" id="nomeProduto2" href="./produto2.html"></a>
-              <span class="id" id="id2"></span>
-              <span class="real" id="valorRealProduto2"></span>
-              <span class="price dolar" id="valorDolarProduto2"></span>
-            </div>
-          </a>
-
-
-          <a href="./produto3.html">
-            <div class="card">
-              <div class="image"><img class="imagensCard" src="imagens/produto3Index.png" alt=""></div>
-              <a class="title" id="nomeProduto3" href="./produto3.html"></a>
-              <span class="id" id="id3"></span>
-              <span class="real" id="valorRealProduto3"></span>
-              <span class="price dolar" id="valorDolarProduto3"></span>
-            </div>
-          </a>
-
-          </div>
-        </div>
-
-        <div class="carousel-item">
-
-          <div class="alinhar">
-            <a href="./produto4.html">
-            <div class="card">
-              <div class="image"><img class="imagensCard" src="imagens/produtoIndex4.png" alt=""></div>
-              <h6 class="title" id="nomeProduto4"></h6>
-              <span class="id" id="id4"></span>
-              <span class="real" id="valorRealProduto4"></span>
-              <span class="price dolar" id="valorDolarProduto4"></span>
-            </div>
-          </a>
-
-            <a href="./produto5.html">
+      <div id="carouselExample" class="carousel slide">
+  
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+  
+            <div class="alinhar">
+              <a href="./produto6398.html">
               <div class="card">
-              <div class="image"><img class="imagensCard" src="./imagens/produtoo5.png" alt=""></div>
-              <h6 class="title" id="nomeProduto5"></h6>
-              <span class="id" id="id5"></span>
-              <span class="real" id="valorRealProduto5"></span>
-              <span class="price dolar" id="valorDolarProduto5"></span>
+                <div class="image"><img class="imagensCard" src="imagens/produto1Index.png" alt=""></div>
+                <a class="title" id="nomeProduto1" href="./produto6398.html"></a>
+                <span class="id" id="id"></span>
+                <span class="real" id="valorRealProduto1"></span>
+                <span class="price dolar" id="valorDolarProduto1"></span>
+              </div>
+            </a>
+  
+  
+  
+            <a href="./produto2.html">
+              <div class="card">
+                <div class="image"><img class="imagensCard" src="imagens/produto2Index.png" alt=""></div>
+                <a class="title" id="nomeProduto2" href="./produto2.html"></a>
+                <span class="id" id="id2"></span>
+                <span class="real" id="valorRealProduto2"></span>
+                <span class="price dolar" id="valorDolarProduto2"></span>
+              </div>
+            </a>
+  
+  
+            <a href="./produto3.html">
+              <div class="card">
+                <div class="image"><img class="imagensCard" src="imagens/produto3Index.png" alt=""></div>
+                <a class="title" id="nomeProduto3" href="./produto3.html"></a>
+                <span class="id" id="id3"></span>
+                <span class="real" id="valorRealProduto3"></span>
+                <span class="price dolar" id="valorDolarProduto3"></span>
+              </div>
+            </a>
+  
             </div>
-          </a>
-
-             <div class="card">
-              <div class="image"><img class="imagensCard" src="imagens/produtoIndex6.png" alt=""></div>
-              <h6 class="title" id="nomeProduto6"></h6>
-              <span class="id" id="id6"></span>
-              <span class="real" id="valorRealProduto6"></span>
-              <span class="price dolar" id="valorDolarProduto6"></span>
-            </div>
-
           </div>
-
+  
+          <div class="carousel-item">
+  
+            <div class="alinhar">
+  
+              <a href="./produto4.html">
+              <div class="card">
+                <div class="image"><img class="imagensCard" src="imagens/produtoo4.png" alt=""></div>
+                <a class="title" id="nomeProduto4" href="./produto4.html"></a>
+                <span class="id" id="id4"></span>
+                <span class="real" id="valorRealProduto4"></span>
+                <span class="price dolar" id="valorDolarProduto4"></span>
+              </div>
+              </a>
+  
+  
+              <a href="./produto5.html">
+                <div class="card">
+                <div class="image"><img class="imagensCard" src="imagens/produtoo5.png" alt=""></div>
+                <a class="title" id="nomeProduto5" href="./produto5.html"></a>
+                <span class="id" id="id5"></span>
+                <span class="real" id="valorRealProduto5"></span>
+                <span class="price dolar" id="valorDolarProduto5"></span>
+              </div>
+              </a>
+  
+               <div class="card">
+                <div class="image"><img class="imagensCard" src="imagens/produtoIndex6.png" alt=""></div>
+                <h6 class="title" id="nomeProduto6"></h6>
+                <span class="id" id="id6"></span>
+                <span class="real" id="valorRealProduto6"></span>
+                <span class="price dolar" id="valorDolarProduto6"></span>
+              </div>
+  
+            </div>
+  
+          </div>
+  
+  
         </div>
-
-
-      </div> 
+  
 
       <div class="botoes-carrosel">
         <button class="carousel-control-prev control-prev-produto" type="button" data-bs-target="#carouselExample"
